test/errors/type/str/replace2.yasl
mt.lookup('', .replace)('1', true, .str)
